--- a/fast-boot-app/src/main/resources/application.yml
+++ b/fast-boot-app/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     username: ${RABBIT_MQ_USERNAME:guest}
     password: ${RABBIT_MQ_PASSWORD:guest}
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:10.1.70.78}:3306/fast-admin?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useSSL=false
+    url: jdbc:mysql://${MYSQL_HOST:10.1.70.78}:3306/test?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF8&autoReconnect=true&useSSL=false
     username: root
     # Jasypt加密 可到common-utils中找到JasyptUtil加解密工具类生成加密结果 格式为ENC(加密结果)
     password: 123456
@@ -33,7 +33,7 @@ spring:
     # 自动生成表结构
     generate-ddl: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
       #update级别会根据bean创建/更新表结构
     properties:
       hibernate:
@@ -62,8 +62,8 @@ mybatis-plus:
   # 放在resource目录 classpath:/mapper/*Mapper.xml
   mapper-locations: classpath:/mapper/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.fast.*.entity
-  typeEnumsPackage: com.fast.*.entity.enums
+  typeAliasesPackage: com.fastboot.entity
+  typeEnumsPackage: com.fastboot.entity.enums
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: id_worker
