--- a/fast-generator/src/main/resources/application.properties
+++ b/fast-generator/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-#工作空间workspace/src/main/java 如E:\\WORKSPACE\\fast-cloud\\fast-example
-workspace=E:\\mywork\\fast-cloud\\fast-admin
+#工作空间,这里写你要生成到哪个项目下面，这个就是哪个项目的文件夹
+workspace=E:\\mywork\\fast-boot\\fast-boot-app
 #要生成的表
-tables=sys_users
-#sys_account,sys_account_roles,sys_department,sys_dict,sys_dict_data,sys_log,sys_login_config,sys_permission,sys_roles,sys_roles_dept,sys_roles_permission
+tables=sys_user
 #包名称
-packageName=cn.fast.usc
+packageName=cn.fastboot
 
 #数据库配置
 driverName=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://10.1.70.78:3306/fast-admin?useUnicode=true&characterEncoding=UTF-8&tinyInt1isBit=true
+url=jdbc:mysql://10.1.70.78:3306/test?useUnicode=true&characterEncoding=UTF-8&tinyInt1isBit=true
 username=root
 password=123456
