--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 
     <properties>
         <!-- Environment Settings -->
+        <fastboot.version>0.0.1</fastboot.version>
+
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
